examples/test/testpolicy11096.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11096
  namespace: namespace25
spec:
  podSelector:
    matchLabels:
      key22: value26
      key29: value17
      key13: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value10
          key19: value5
          key23: value33
      podSelector:
        matchLabels:
          key21: value44
          key4: value42
          key19: value5
